# job_application_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Omobolaji__Resume.docx  README.md  SETUP_AND_TEST_GUIDE.md  alembic.ini  compose.yml  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: config.py  logging_setup.py  main.py
app/credentials/: validation.py
app/db/: __init__.py  base.py  models.py
app/discovery/: fetchers.py  models.py  pipeline.py  scoring.py  service.py
app/learning/: matcher.py  models.py  needs_info.py  service.py
app/manual_apply/: fetcher.py  service.py
app/playwright_submit/: browser.py  captcha.py  form_filler.py  screenshots.py  strategy.py
app/resume/: service.py
app/review/: applied_service.py  docx_edit.py  service.py  states.py
app/runs/: __init__.py  context.py  service.py
app/scheduler/: __init__.py  heartbeat.py  killswitch.py  rate_limit.py  service.py
app/security/: __init__.py  fernet.py  log_scrubber.py
app/settings/: __init__.py  service.py
app/submission/: builder.py  creds.py  holdout.py  models.py  notifications.py  pipeline.py  registry.py  sender.py  service.py  suppression.py
app/tailoring/: budget.py  docx_writer.py  engine.py  models.py  pipeline.py  preview.py  (+3 more)
tests/: conftest.py  test_phase2_credentials.py  test_phase2_resume.py  test_phase2_settings.py  test_phase3_discovery.py  test_phase3_integration.py  test_phase4_tailoring.py
(+234 files in other folders)
